fixed apply image on safari

--- a/app/assets/stylesheets/_common.css.scss
+++ b/app/assets/stylesheets/_common.css.scss
@@ -308,14 +308,6 @@ html, body {
   margin: 0px;
 }
 
-#apply_image {
-  background-image: image-url("writer.jpg");
-  background-size: cover;
-  background-position: center center;
-  height: 0;
-  padding-top: 20%;
-}
-
 .date_post_preview {
   font-size: 20px !important;
   font-style: italic;
